# dedART

./: .gitignore  Makefile  README.md  USAGE.md  config.ini  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  test_file.py
.cursor/rules/: global-rule.mdc
app/: __init__.py  main.py
app/core/: assets.py  commands.py  project.py  scene.py  settings.py  tilemap.py
app/ui/: __init__.py  canvas.py  main_window.py
cache/conversations/: 0e6c9f46-7f13-4d5a-b9d6-ef867771ca92.json  0e8fad1a-6f1d-4030-a16b-c9b507ad35ab.json  10837968-5033-43d1-a701-5136fd41538d.json  1e7d7533-a0dd-48fe-abf1-578c11a70928.json  1e9f6ef6-c2bf-4e91-9830-36d83877177f.json  2770b59d-308e-4b26-925c-5475052a9afb.json  27a55059-662b-4313-974c-628d7dbbc789.json  2a9724fa-39fc-452f-8796-2c9fc1888c9a.json  3a8c609d-1c7d-4417-8f0e-fdb1b320060d.json  3a96c4f9-1e93-4041-89dc-fd650574c66d.json  3bee8865-b5dd-4a2f-bc3e-2bdbb942dfb9.json  3e322ba3-2054-464f-a2fb-57e7725d407b.json  43893e3d-9c76-4bae-9cea-97e16360715d.json  44593354-1cd0-42b5-b56e-a85d5471dc4c.json  453a8ee0-7997-4297-a59a-d9fe1bd90fdd.json  4842b847-b4c8-41c3-97df-59cb683e1cd3.json  49538fd4-3ca4-4db5-b681-093a1a0faadc.json  4a47f59b-ea57-4ef1-b3f2-6deed9a264f9.json  4dd57281-07a6-400d-ac03-cfc4f8e4f0ea.json  4ffe8298-ad1c-47e8-bcfd-6ed50238ec95.json  4fff62a2-9404-4d4a-b6d7-a6ac4d0c6deb.json  58040ffa-dcbc-4be6-b773-1b13680d519a.json  5b3aa34c-9b79-42f5-9fb0-7ed6a173b97d.json  5eb88fd5-1799-41d1-bcdc-881c92565c4f.json  6232822e-2640-45af-b174-266f5bfd0271.json  (+40 more)
docs/: CHAT_ARCHITECTURE.md
src/: __init__.py  app.py
(+43 files in other folders)
