[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dedart"
version = "0.1.0"
description = "2D game editor on PyQt6"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dedART Team" }]
dependencies = [
  "PyQt6",
  "pydantic",
  "pyyaml",
  "Pillow",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-qt",
  "ruff",
  "black",
  "isort",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["PyQt6", "PIL"]


